# spln-2223

./: README.md
TPC1/: README.md  medicina.json  medicina_prod.xml  read_medicina.py
TPC2/: README.md  first_example.txt  lex.py  parser.out  parser.py  parsetab.py  read_medicina.py
TPC3/: README.md  first_example.html  first_example.txt  lex.py  medicina.txt  parser.out  parser.py  parsetab.py
TPC4/: HP_proc.txt  README.md  make_command.bash  pyproject.toml  tokenizador
TPC4/tokenizador/: __init__.py
TPC4/tokenizador/conf/: abervs.txt
TPC5/: LICENSE  README.md  pyproject.toml
TPC5/tokenizador/: __init__.py  utils.py
TPC5/tokenizador/conf/: trans.txt
TPC6/: README.md  web_scrap_jornal.py
TPC6/html/: ojogo.html
